bump jackson to 2.16.1, jjwt to 0.12.3